# pydo

./: .coverage  pyproject.toml
tests/: test_app.py
